--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,16 @@
 body{
-  color: deeppink;
-  text-align: center;
+  color: black;
+  text-align: left;
   font-family: "Arial";
+  font-size: 10px;
+}
+#container{
+  width: 70%;
+  padding: 1em;
+  border: 1px solid silver;
+  margin: 0 auto;
+}
+
+#container h1{
+  font-size: 20px;
 }
